--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,5 +1,8 @@
 name: Auto run
-on: [push]
+on:
+  - push
+  - schedule:
+    - cron: '5 9,11,14,16 * * 1-5'
 jobs:
   run:
     runs-on: ubuntu-latest
