--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -13,16 +13,8 @@ jobs:
         with:
           python-version: '3.9'
           architecture: 'x64'
-      - uses: actions/cache@v2
-        id: cache-venv
-        with:
-          path: ./.venv/
-          key: ${{ runner.os }}-venv2-${{ hashFiles('**/requirements*.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-venv-
-      - run: python -m venv ./.venv && . ./.venv/bin/activate && pip install -r requirements.txt
-        if: steps.cache-venv.outputs.cache-hit != 'true'
-      - run: . ./.venv/bin/activate && python main.py
+      - run: pip install -r requirements.txt
+      - run: python main.py
         env:
           UNIGE_USERNAME: ${{ secrets.UNIGE_USERNAME }}
           UNIGE_PASSWORD: ${{ secrets.UNIGE_PASSWORD }}
